--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-storage.js"></script>
 
     <script>
       var config = {
