Add lazy loading for feed
- Adding the library lozad for lazy loading
- Showing a loading spinner when loading images
- Only loading the first two images

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,11 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"
+    ></script>
+
     <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-app.js"></script>
 
     <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-auth.js"></script>
@@ -23,12 +28,12 @@
 
     <script>
       var config = {
-        apiKey: "AIzaSyAFp8tpwDeUhRFB4ruP-Wk6FyujzpGyon4",
-        authDomain: "wiggles-f0bd9.firebaseapp.com",
-        databaseURL: "https://wiggles-f0bd9.firebaseio.com",
-        projectId: "wiggles-f0bd9",
-        storageBucket: "wiggles-f0bd9.appspot.com",
-        messagingSenderId: "837754270874"
+        apiKey: 'AIzaSyAFp8tpwDeUhRFB4ruP-Wk6FyujzpGyon4',
+        authDomain: 'wiggles-f0bd9.firebaseapp.com',
+        databaseURL: 'https://wiggles-f0bd9.firebaseio.com',
+        projectId: 'wiggles-f0bd9',
+        storageBucket: 'wiggles-f0bd9.appspot.com',
+        messagingSenderId: '837754270874'
       };
       firebase.initializeApp(config);
       window.firebase = firebase;
