Fixing site manifest

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,32 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/icons/favicon.ico" />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="%PUBLIC_URL%/icons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%/icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%/icons/favicon-16x16.png"
+    />
+    <meta name="msapplication-TileColor" content="#da532c" />
+
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
-    <link rel="manifest" href="%PUBLIC_URL%/icons/site.webmanifest" />
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
     <title>Wiggles</title>
   </head>
   <body>
