--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
-    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Wiggles</title>
   </head>
   <body>
