--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#3d4852" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Wiggles</title>
   </head>
