Changing the name of the app...

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     />
     <meta name="theme-color" content="#3d4852" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Wiggles</title>
+    <title>Wiggle Room</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
