--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,10 @@
     />
     <meta name="theme-color" content="#7553bb" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"
+    />
     <title>Wiggle Room</title>
   </head>
   <body>
