including pwa compat

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,12 @@
     />
     <meta name="theme-color" content="#7553bb" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script
+      async
+      src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.8/pwacompat.min.js"
+      integrity="sha384-uONtBTCBzHKF84F6XvyC8S0gL8HTkAPeCyBNvfLfsqHh+Kd6s/kaS4BdmNQ5ktp1"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"
