--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,11 @@
 <html>
-<body>
-  <div id="app"></div>
-  <script src="../src/index.tsx"></script>
-</body>
+  <head>
+      <meta charset="UTF-8">
+      <title>Wiggle Room</title>
+      <link rel="stylesheet" href="../src/index.css">
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="../src/index.tsx"></script>
+  </body>
 </html>
