going back to 3rd party auth for now

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -59,7 +59,7 @@
     <script>
       var config = {
         apiKey: 'AIzaSyDcx5xDlQS3ixEFF8mESoxUzTk9f56uQhA',
-        authDomain: 'wiggle-room.xyz',
+        authDomain: 'wiggles-f0bd9.firebaseapp.com',
         databaseURL: 'https://wiggles-f0bd9.firebaseio.com',
         projectId: 'wiggles-f0bd9',
         storageBucket: 'wiggles-f0bd9.appspot.com',
