--- a/web/index.html
+++ b/web/index.html
@@ -2,24 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/icons/favicon.ico" />
+    <link rel="shortcut icon" href="/icons/favicon.ico" />
 
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="%PUBLIC_URL%/icons/apple-touch-icon.png"
+      href="/icons/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="%PUBLIC_URL%/icons/favicon-32x32.png"
+      href="/icons/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="%PUBLIC_URL%/icons/favicon-16x16.png"
+      href="/icons/favicon-16x16.png"
     />
     <meta name="msapplication-TileColor" content="#da532c" />
 
@@ -28,7 +28,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <script
       async
       src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.8/pwacompat.min.js"
@@ -45,7 +45,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class="h-full"></div>
-
+    <script type="module" src="/src/index.tsx"></script>
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"
@@ -58,17 +58,16 @@
     <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-firestore.js"></script>
     <script>
       var config = {
-        apiKey: 'AIzaSyDcx5xDlQS3ixEFF8mESoxUzTk9f56uQhA',
-        authDomain: 'wiggles-f0bd9.firebaseapp.com',
-        databaseURL: 'https://wiggles-f0bd9.firebaseio.com',
-        projectId: 'wiggles-f0bd9',
-        storageBucket: 'wiggles-f0bd9.appspot.com',
-        messagingSenderId: '837754270874'
+        apiKey: "AIzaSyDcx5xDlQS3ixEFF8mESoxUzTk9f56uQhA",
+        authDomain: "wiggles-f0bd9.firebaseapp.com",
+        databaseURL: "https://wiggles-f0bd9.firebaseio.com",
+        projectId: "wiggles-f0bd9",
+        storageBucket: "wiggles-f0bd9.appspot.com",
+        messagingSenderId: "837754270874",
       };
       firebase.initializeApp(config);
       window.firebase = firebase;
       window.db = window.firebase.firestore();
     </script>
-
   </body>
 </html>
