--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <link rel="manifest" href="/manifest.json" />
     <title>Wiggle Room</title>
   </head>
   <body>
