Move to google sign in from cloudflare access
Also this adds some tests for future harness engineering.

--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@
     />
     <link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
     <title>Wiggle Room</title>
+    <script src="https://accounts.google.com/gsi/client" async></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
