--- a/web/index.html
+++ b/web/index.html
@@ -6,8 +6,9 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover"
     />
+    <meta name="theme-color" content="#f3f4f6" />
     <link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
     <title>Wiggle Room</title>
   </head>
